fix: h2 & endpoint